5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1835_2222.log
== TEST (2019-07-02 00:42:16) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[3,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:42:53) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[0]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for i in range(MEDALHAS):
	total = total + quadro[3,i]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:43:04) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[0]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for i in range(MEDALHAS):
	total = total + quadro[i,3]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:43:32) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[0]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for i in range(MEDALHAS):
	total = total + quadro[3,i]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:43:41) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[0]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for i in range(MEDALHAS):
	total = total + quadro[2,i]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:43:55) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[0]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for i in range(MEDALHAS):
	total = total + quadro[i,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:44:13) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
total = total + quadro[3,j]
print(total)

-- ERROR:
File "XXXX", line 18
    total = total + quadro[3,j]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:44:21) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[3,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:45:41) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[0,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:46:38) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12, 8, 21],
[10, 18, 14]
])
# Tipos de medalhas (no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[6,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
